# Eventbuilder

./: .gitignore  Cargo.toml  README.md  eventbuilder-9e6438c99367fa9f.js  eventbuilder-9e6438c99367fa9f_bg.wasm  eventbuilder-d4532fc5106d947d.js  eventbuilder-d4532fc5106d947d_bg.wasm  index.html  rust-toolchain  sw.js
.github/workflows/: rust.yml
etc/: archivist.sh  parquet2root.py  requirements.txt
src/: app.rs  app_web.rs  channel_data.rs  channel_map.rs  compass_run.rs  lib.rs  main.rs
src/evb/: archivist.rs  channel_data.rs  channel_map.rs  compass_data.rs  compass_file.rs  compass_run.rs  error.rs  event_builder.rs  kinematics.rs  mod.rs  nuclear_data.rs  scaler_list.rs  shapira_fp.rs  shift_map.rs
src/ui/: app.rs  app_web.rs  mod.rs
