[package]
name = "eventbuilder"
version = "1.0.0"
authors = ["Alex Conley <imaconley1@gmail.com>"]
edition = "2021"
rust-version = "1.82"

[dependencies]
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "x11",       # To support Linux (and CI) use x11 or wayland
    #"wayland",
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1.0.216", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.6"
strum = "0.26.3"
strum_macros = "0.26.4"
rand = "0.8.5"
bitflags = "2.6"
nom = "7.1.3"
flate2 = "1.0.35"
polars = { version = "0.45.1", features = ["parquet", "lazy", "dtype-struct"] }
tar = "0.4.43"
serde_yaml = "0.9.31"
rfd = "0.15.1"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]